# inventory_scripts

./: .gitignore  README.md  gen_con_num.py  gen_inv_num.py  qrcode.glabels  qrcode_mb_boite.glabels  setup.cfg  setup.py  test_inventory_number.py
.github/workflows/: run_unit_tests.yml
src/inventory_scripts/: container_number.py  inventory_number.py
tests/: test_inventory_number.py
