[metadata]
# replace with your username:
name = inventory_number
version = 0.0.1
author = Musee bolo
author_email = someone@museebolo.ch
description = inventory validation code for bolo musee
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:museebolo/inventory_scripts.git
project_urls =
    Bug Tracker = https://github.com/museebolo/inventory_scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src